# TerraTE

./: .gitignore  CMakeLists.txt  Makefile  README.md
header/: utilities.h
src/: Makefile  main.c
src/headers/: utilities.c  utilities.h
src/utilities/: utilities.c
